# anime-ontology

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/naruto/ontology/: naruto.ttl
docs/: architecture.md  ontology-design.md  pilot-review.md
scripts/: export_neo4j.py  run_episode.py  run_web.py
src/anime_ontology/: __init__.py  config.py  discovery.py  neo4j_client.py  pipeline.py
src/anime_ontology/export/: __init__.py  neo4j_export.py
src/anime_ontology/extraction/: __init__.py  cache.py  extractor.py  prompts.py  schema.py
src/anime_ontology/llm/: __init__.py  base.py  config.py  proxy.py
src/anime_ontology/llm/providers/: __init__.py  anthropic_provider.py  ollama_provider.py  openai_provider.py  registry.py
src/anime_ontology/ontology/: __init__.py  builder.py  namespaces.py  property_graph_mapping.py  store.py
src/anime_ontology/ontology/schema/: core.ttl
src/anime_ontology/query/: __init__.py  answer.py  cypher_generation.py  engine.py  executor.py  safety.py  schema_context.py
src/anime_ontology/subtitles/: __init__.py  encoding.py  models.py  registry.py  smi_parser.py  srt_parser.py
src/anime_ontology/transcription/: __init__.py  audio.py  base.py  cache.py  config.py  proxy.py
src/anime_ontology/transcription/providers/: __init__.py  local_whisper_provider.py  openai_whisper_provider.py  registry.py
src/anime_ontology/vision/: __init__.py  models.py  ocr.py  scene_analysis.py  scene_detection.py
src/anime_ontology/webapp/: __init__.py  app.py
src/anime_ontology/webapp/static/: index.html  script.js  (+1 more)
