[project]
name = "anime-ontology"
version = "0.1.0"
description = "애니메이션/영상 시리즈의 자막 데이터로부터 온톨로지 기반 지식그래프를 구축하는 파이프라인"
requires-python = ">=3.11"
dependencies = [
    "rdflib>=7.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "neo4j>=5.20",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anime_ontology"]
