[project]
name = "anime-ontology"
version = "0.1.0"
description = "애니메이션/영상 시리즈의 자막 데이터로부터 온톨로지 기반 지식그래프를 구축하는 파이프라인"
requires-python = ">=3.11"
dependencies = [
    "rdflib>=7.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "neo4j>=5.20",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
# 자막이 없는 영상을 처리할 때만 필요 (무겁기 때문에 기본 설치에는 포함하지 않음).
# 시스템에 ffmpeg가 설치되어 있어야 한다.
stt = ["faster-whisper>=1.0"]
# OCR 기반 기본 장면 분석. 시스템에 tesseract(+ 한국어 언어팩)가 설치되어 있어야 한다.
vision = ["pytesseract>=0.3", "Pillow>=10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anime_ontology"]
